<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etCli"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/h_cliente"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNum"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="@string/h_numero"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAcessar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="368dp"
        android:text="@string/btn_acesso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbPou"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rbtn_poupanca" />

        <RadioButton
            android:id="@+id/rbEsp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rbtn_especial" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/autor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>